--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,9 @@ node_js:
   - "16"
 before_install:
  - npm install -g mocha
-
+# command to install dependencies
+install:
+  - pip install -r requirements.txt
+# command to run tests
+script:
+  - pytest
