--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,18 +1,32 @@
-nom : Démo des actions GitHub
-run-name : ${{ github.actor }} teste GitHub Actions 🚀
-sur : [appuyer]
-emplois:
-  Explorer-GitHub-Actions :
-    s'exécute sur : ubuntu-latest
+# Nom du workflow
+name: Mon workflow
+# Condition pour lancer le workflow
+on:
+  push:
+    branches: [ "development" ]
+  pull_request:
+    branches: [ "main" ]
+# Tâches à effectuer
+jobs: 
+  # Première tâche
+  mon-premier-job:
+    runs-on: ubuntu-latest
+    needs: [mon-deuxieme-job, idle-job]
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - run: echo "Mon premier job a été lancé"
+      # Récupération du contenu du répertoire
       - name: Check out repository code
         uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: ls -l
+  # Deuxièmre tâche
+  mon-deuxieme-job:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "Deuxième job"
+      - run: echo "test" > test.txt
+      - run: ls -l
+      - run: cat test.txt
+  idle-job:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo ""
